--- a/index.html
+++ b/index.html
@@ -1,182 +1,208 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Charlie Houston</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <script src="https://kit.fontawesome.com/2a0f064e00.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Charles Houston</title>
 </head>
 
 <body>
-    <!-- Site Header -->
     <header>
-        <h1>
-            <a href="/">Charles Houston</a>
-        </h1>
-        <nav>
-            <!--Unordered list-->
-            <ul>
-                <!--nav links-->
-                <li>
-                    <a href="#bio">Bio</a>
-                </li>
-                <li>
-                    <a href="#portfolio">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact Me</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <!--Hero Section-->
-    <div class="hero">
-        <h2 class="hero-subtitle">Welcome!</h2>
-    </div>
-
-    <main>
-        <!--BIO-->
-        <section id="=bio">
-            <div class="flex-row">
-                <h2 class="section-title primary-border">
-                    Bio
-                </h2>
-            </div>
-            <div class="title">
-                <article class="content">
-                    <!--avatar photo-->
-                    <div>
-                        <img class="avatar" src="https://scontent.fphx1-2.fna.fbcdn.net/v/t1.6435-9/118001488_3521429204579899_5119218647581223500_n.jpg?_nc_cat=100&ccb=1-6&_nc_sid=174925&_nc_ohc=3h29-tTPP5EAX_3wwXF&_nc_ht=scontent.fphx1-2.fna&oh=00_AT9StIeO3b3a5xGNAuMN-TySep6r99Es4uBa8Nq93tekrA&oe=62A15B0E"
-                            alt="charlie houston's selfie">
-                    </div>
-                    <!--bio text-->
-                    <div class="bio-text">
-                        <h3 class="statement">I am an aspiring freelance web designer and developer.</h3>
-                        <p>
-                            My name is Charles Houston, but my friends call me Charlie! I have a real passion for design
-                            and
-                            development, and not just software and web applications. In my proffesional life I
-                            have
-                            been a welder/fabricator, a carpenter, and a general contractor with a specialization
-                            in
-                            remodeling... so it's safe to say that I just like to build and create things.
-                        </p>
-                        <p>
-                            In my free time, I like to travel and explore with my wife and two dogs. I play
-                            guitar,
-                            mountain bike, and read for fun. Family is very important to me, so I also like to visit my
-                            parents and siblings often. I believe that the most valuable thing in this world
-                            is time,
-                            and I try to spend mine wisely.
-                        </p>
-                    </div>
-                    <!--bio pics-->
+        <section class="hero is-medium">
+            <div class="hero-head">
+                <nav class="navbar">
                     <div class="container">
-                        <div class="item">
-                            <img src="https://scontent.fphx1-2.fna.fbcdn.net/v/t1.6435-9/208984584_4865659563449396_4729930713825081878_n.jpg?_nc_cat=105&ccb=1-6&_nc_sid=8bfeb9&_nc_ohc=Mt2iokRvwDoAX8BBSeU&_nc_ht=scontent.fphx1-2.fna&oh=00_AT9Tem52HQ6Kc7Y2tbaUajkGZpxmqVz6pH4Cn_2saTMNQA&oe=62A2DE4B"
-                                alt="charlie and maegan houston in las vegas ,nv.">
-                        </div>
-                        <div class="item-tall">
-                            <img src="https://scontent.fphx1-2.fna.fbcdn.net/v/t39.30808-6/262099912_4994684850587653_401779041802328450_n.jpg?_nc_cat=101&ccb=1-6&_nc_sid=730e14&_nc_ohc=yecqdTJsAP8AX84Nv37&_nc_ht=scontent.fphx1-2.fna&oh=00_AT_yFPK4mmDhzpW3NmS09N_Jl91nhmSQAtMslZCt9kkMeA&oe=628195A0"
-                                alt="view on lost maples park">
-                        </div>
-                        <div class="item">
-                            <img src="https://scontent.fphx1-2.fna.fbcdn.net/v/t1.6435-9/129663839_3893393267383489_6062812808568672058_n.jpg?_nc_cat=100&ccb=1-6&_nc_sid=174925&_nc_ohc=p9uNYYeq3CkAX8dU7R3&_nc_ht=scontent.fphx1-2.fna&oh=00_AT82I3b6GEubedQn9foxefzPbzpsP6SAp-WrCpPS7wTD1A&oe=62A2363D"
-                                alt="charlie in front of the hopscotch gallery in San Antonio,tx">
-                        </div>
-                    </div>
-                </article>
-        </section>
-
-        <!--PORTFOLIO-->
-        <section id="portfolio">
-            <div class="flex-row">
-                <h2 class="section-title primary-border">
-                    Portfolio
-                </h2>
-            </div>
-            <div class="title">
-                <article class="content">
-                    <div class="work-text">
-                        <!--declaration statement-->
-                        <h3 class="statement">
-                            I help businesses create a brand or identity that is clear, strong, and reflective of what
-                            they are
-                            as an
-                            entity.</h3>
-                        <p>
-                            Here is some examples of my work.
-                        </p>
-                    </div>
-                    <!--links to work-->
-                    <ul class="list">
-                        <li>
-                            <a href="https://gnartistic.github.io/run-buddy/">
-                                <h3>Run-buddy</h3>
-                                <img src="https://images2.imgbox.com/e8/86/9TykuAFU_o.jpeg">
-                                <img src="https://images2.imgbox.com/b0/31/lbAcKk7l_o.jpeg">
+                        <div class="navbar-brand">
+                            <a class="navbar-item" href="/">
+                                <h1 class="title has-text-white">Charles Houston</h1>
                             </a>
-                        </li>
-                        <li>
-                            <a href="https://gnartistic.github.io/horiseon/">
-                                <h3>Horiseon - Search Engine Optimization</h3>
-                                <img src="https://images2.imgbox.com/ea/99/MDfuV0iT_o.jpeg">
-                                <img src="https://images2.imgbox.com/d0/44/8ZN9MWaL_o.jpeg" </a>
-                        </li>
-                        <li>
-                            <a href="https://gnartistic.github.io/charlie-houston/">
-                                <img src="">
-                            </a>
-                        </li>
-                    </ul>
-                </article>
-        </section>
-        <!--CONTACT ME-->
-        <section id="contact" class="contact">
-            <div class="flex-row">
-                <h2 class="section-title primary-border">
-                    Contact Me
-                </h2>
+                        </div>
+                </nav>
             </div>
-            <div class="title">
-                <article class="content">
-                    <div>
-                        <ul class="list">
-                            <!--PHONE-->
-                            <li>
-                                <a href="tel:2104457296">210-445-7296</a>
+            <div class="hero-body">
+                <div class="container has-text-centered">
+                    <h1 class="title has-text-white is-size-1 has-text-weight-bold">Welcome!</h1>
+                    <p class="subtitle"></p>
+                </div>
+            </div>
+            <div class="hero-foot">
+                <nav class="tabs is-fullwidth">
+                    <div class="container">
+                        <ul>
+                            <li class="is-active">
+                                <a href="#about" class="has-text-white">
+                                    <span class="icon is-small">
+                                        <i class="fa-solid fa-book"></i>
+                                    </span>About Me</a>
                             </li>
-                            <!--EMAIL-->
                             <li>
-                                <a href="mailto:gn4rtistic@gmail.com">gn4rtistic@gmail.com</a>
+                                <a href="#services" class="has-text-white">
+                                    <span class="icon is-small">
+                                        <i class="fa-solid fa-laptop-code"></i>
+                                    </span>Services</a>
                             </li>
-                            <!--GITHUB-->
                             <li>
-                                <a href="https://github.com/gnartistic">Github</a>
+                                <a href="#works" class="has-text-white">
+                                    <span class="icon is-small">
+                                        <i class="fa-solid fa-briefcase"></i>
+                                    </span>Works</a>
                             </li>
-                            <!--SPOTIFY-->
                             <li>
-                                <a href="https://open.spotify.com/user/9o7s9mescfet5m7u7e65rcmxm">Spotify</a>
-                            </li>
-                            <!--INSTAGRAM-->
-                            <li>
-                                <a href="https://www.instagram.com/gn4rtistic/">Instagram</a>
+                                <a href="#contact" class="has-text-white">
+                                    <span class="icon is-small">
+                                        <i class="fa-solid fa-phone"></i>
+                                    </span> Me</a>
                             </li>
                         </ul>
                     </div>
-                </article>
+                </nav>
+            </div>
+        </section>
+    </header>
+    <main>
+        <!--ABOUT ME SECTION-->
+        <section id="about" class="section is-medium">
+            <h1 class="title">About Me</h1>
+            <h2 class="subtitle mt-6">I am an aspiring freelance <strong>web developer.</strong></h2>
+            <div class=" section is-mediu\\\ tile is-ancestor">
+                <div class="tile mb-5">
+                    <img src="/assets/images/profile-pic.png">
+                </div>
+                <div class="tile is-6 is-vertical ml-5">
+                    <div class="tile mb-5">
+                        <p class="indent">
+                            Salutations! My name is <strong>Charles Houston</strong>, but my friends call me
+                            <strong>Charlie</strong>. I'm a 26 year old husband and dog dad with a strong passion for
+                            web development. I really enjoy creating things, not just web applications. Once upon a
+                            time, I was a welder/pipefitter, a carpenter, and an independent contractor with a
+                            specialization in remodeling. I've been building things with my bare hands my entire life,
+                            and now I get the chance to build them with my mind!
+                        </p>
+                    </div>
+                    <div class="tile">
+                        <p class="indent">
+                            In my free time, I like to travel and explore with my wife and two dogs. I like to play
+                            guitar, mountain bike, and read for fun. My family is very important to me, and I try to
+                            spend as quality time with them as possible. I believe that the most valuable thing in this
+                            world is time, and I try to spend mine wisely.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--SERVICES OFFERED SECTION-->
+        <section id="services" class="section is-medium">
+            <h1 class="title">Services</h1>
+            <h2 class="subtitle mt-6">I help small businesses and individuals create brands or identities that are
+                clear,
+                strong, and reflective of what they are as an entity.</h2>
+        </section>
+        <!-- WORK DISPLAY SECTION-->
+        <section id="works" class="section is-medium">
+            <h1 class="title">Works</h1>
+            <h2 class="subtitle mt-6">Here is some examples of my work.</h2>
+            <section class="section">
+                <div class="tile is-ancestor is-vertical">
+                    <div class="tile is-12">
+                        <a href="https://gnartistic.github.io/weatherForecastDash/">
+                            <img width="1140" height="860" src="./assets/images/weatherforcast1.png">
+                        </a>
+                    </div>
+                    <div class="tile mt-5">
+                        <div class="tile is-6">
+                            <a href="https://gnartistic.github.io/workDayScheduler/">
+                                <img src="./assets/images/workdaysched1.png">
+                            </a>
+                        </div>
+                        <div class="tile is-6 mr-5">
+                            <a href="https://gnartistic.github.io/workDayScheduler/">
+                                <img src="./assets/images/workdaysched2.png">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="tile mt-6">
+                        <div class="tile is-6 mr-5">
+                            <a href="https://gnartistic.github.io/horiseon/">
+                                <img src="./assets/images/horiseon1.jpeg">
+                            </a>
+                        </div>
+                        <div class="tile is-6">
+                            <a href="https://gnartistic.github.io/horiseon/">
+                                <img src="./assets/images/horiseon2.jpeg">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
+        <!-- CONTACT SCETION-->
+        <section id="contact" class="section is-large">
+            <h1 class="title">Contact Me</h1>
+            <h2 class="subtitle mt-5">I'd love the chance to create something for you!</h2>
+            <div class="buttons mt-5t">
+                <button class="button">
+                    <a href="https://github.com/gnartistic">
+                    <span class="icon is-small">
+                        <i class="fab fa-github"></i>
+                    </span>
+                    <span>GitHub</span>
+                    </a>
+                </button>
+                <button class="button">
+                    <a href="https://www.instagram.com/gn4rtistic/">
+                    <span class="icon is-small">
+                        <i class="fa-brands fa-instagram"></i>
+                    </span>
+                    <span>Instagram</span>
+                    </a>
+                </button>
+                <button class="button">
+                    <a href="https://open.spotify.com/user/9o7s9mescfet5m7u7e65rcmxm">
+                    <span class="icon is-small">
+                        <i class="fa-brands fa-spotify"></i>
+                    </span>
+                    <span>Spotify</span>
+                    </a>
+                </button>
+                <button class="button">
+                    <a href="tel:2104457296">
+                    <span class="icon is-small">
+                        <i class="fa-solid fa-phone"></i>
+                    </span>
+                    <span>210-445-7296</span>
+                    </a>
+                </button>
+                <button class="button">
+                    <a href="mailto:gn4rtistic@gmail.com">
+                    <span class="icon is-small">
+                        <i class="fa-solid fa-envelope"></i>
+                    </span>
+                    <span>gn4rtistic@gmail.com</span>
+                    </a>
+                </button>
+            </div>
         </section>
     </main>
-
-    <!-- footer -->
-    <footer>
-        <h2>Thanks for checking me out!</h2>
-        <!--footer pic-->
-        <div>
-            <img src="./assets/images/My project.jpg">
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p>
+                <strong>Portfolio</strong> by <a href="https://gnartistic.github.io/charlie-houston/">Charles
+                    Houston</a>. The source code is licensed
+                <a href="./LICENSE">MIT</a>. <a rel="license"
+                    href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License"
+                        style="border-width:0"
+                        src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png" /></a><br />This work is
+                licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative
+                    Commons
+                    Attribution-NonCommercial-NoDerivatives 4.0 International License</a>
+            </p>
         </div>
     </footer>
-    <!-- footer end -->
 </body>
 
 </html>
