trying to fix image display errors

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <section id="about" class="section is-medium">
             <h1 class="title">About Me</h1>
             <h2 class="subtitle mt-6">I am an aspiring freelance <strong>web developer.</strong></h2>
-            <div class=" section is-mediu\\\ tile is-ancestor">
+            <div class="tile is-ancestor">
                 <div class="tile mb-5">
-                    <img src="/assets/images/profile-pic.png">
+                    <img src="./assets/images/profile-pic.png">
                 </div>
                 <div class="tile is-6 is-vertical ml-5">
                     <div class="tile mb-5">
