--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <section class="hero is-medium">
+        <section class="hero is-link is-medium">
             <div class="hero-head">
                 <nav class="navbar">
                     <div class="container">
@@ -34,7 +34,7 @@
                 <nav class="tabs is-fullwidth">
                     <div class="container">
                         <ul>
-                            <li class="is-active">
+                            <li class="">
                                 <a href="#about" class="has-text-white">
                                     <span class="icon is-small">
                                         <i class="fa-solid fa-book"></i>
