added dividers, done done now

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Charles Houston</title>
 </head>
 
-<body>
+<body class="has-background-white-ter">
     <header>
-        <section class="hero is-link is-medium">
+        <section class="hero is-link is-medium mb-2">
             <div class="hero-head">
                 <nav class="navbar">
                     <div class="container">
@@ -66,7 +66,7 @@
     </header>
     <main>
         <!--ABOUT ME SECTION-->
-        <section id="about" class="section is-medium">
+        <section id="about" class="section box is-medium">
             <h1 class="title">About Me</h1>
             <h2 class="subtitle mt-6">I am an aspiring freelance <strong>web developer.</strong></h2>
             <div class="tile is-ancestor">
@@ -96,14 +96,14 @@
         </section>
 
         <!--SERVICES OFFERED SECTION-->
-        <section id="services" class="section is-medium">
+        <section id="services" class="section box is-medium">
             <h1 class="title">Services</h1>
             <h2 class="subtitle mt-6">I help small businesses and individuals create brands or identities that are
                 clear,
                 strong, and reflective of what they are as an entity.</h2>
         </section>
         <!-- WORK DISPLAY SECTION-->
-        <section id="works" class="section is-medium">
+        <section id="works" class="section box is-medium">
             <h1 class="title">Works</h1>
             <h2 class="subtitle mt-6">Here is some examples of my work.</h2>
             <section class="section">
@@ -141,7 +141,7 @@
             </section>
         </section>
         <!-- CONTACT SCETION-->
-        <section id="contact" class="section is-large">
+        <section id="contact" class="section box is-large">
             <h1 class="title">Contact Me</h1>
             <h2 class="subtitle mt-5">I'd love the chance to create something for you!</h2>
             <div class="buttons mt-5t">
