--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body class="has-background-white-ter">
     <header>
-        <section class="hero is-link is-medium mb-2">
+        <section class="hero is-link is-small mb-2">
             <div class="hero-head">
                 <nav class="navbar">
                     <div class="container">
@@ -38,7 +38,7 @@
                                 <a href="#about" class="has-text-white">
                                     <span class="icon is-small">
                                         <i class="fa-solid fa-book"></i>
-                                    </span>About Me</a>
+                                    </span>About</a>
                             </li>
                             <li>
                                 <a href="#services" class="has-text-white">
@@ -56,7 +56,7 @@
                                 <a href="#contact" class="has-text-white">
                                     <span class="icon is-small">
                                         <i class="fa-solid fa-phone"></i>
-                                    </span> Me</a>
+                                    </span>Contact</a>
                             </li>
                         </ul>
                     </div>
