--- a/index.html
+++ b/index.html
@@ -108,30 +108,45 @@
             <h2 class="subtitle mt-6">Here is some examples of my work.</h2>
             <section class="section">
                 <div class="tile is-ancestor is-vertical">
-                    <div class="tile is-12">
-                        <a href="https://gnartistic.github.io/weatherForecastDash/">
-                            <img width="1140" height="860" src="./assets/images/weatherforcast1.png">
-                        </a>
+                    <div class="tile is-12 is-vertical">
+                        <div class="tile ml-5 is-vertical mb-5">
+                            <h3 class="subtitle has-text-weight-bold">CoinWiki</h3>
+                            <a href="https://mcoliveros1202.github.io/coinWiki/">
+                                <video wedith="640" height="360" controls="controls">
+                                    <source src="./assets/images/giphy.mp4" type="video/mp4">
+                                </video>
+                            </a>
+                        </div>
+                        <div class="tile is-vertical mt-5">
+                            <h3 class="subtitle has-text-weight-bold">weatherForecastDash</h3>
+                            <a href="https://gnartistic.github.io/weatherForecastDash/">
+                                <img width="740" height="460" src="./assets/images/weatherforcast1.png">
+                            </a>
+                        </div>
                     </div>
                     <div class="tile mt-5">
-                        <div class="tile is-6">
+                        <div class="tile is-6 is-vertical">
+                            <h3 class="subtitle has-text-weight-bold">workDayScheduler</h3>
                             <a href="https://gnartistic.github.io/workDayScheduler/">
                                 <img src="./assets/images/workdaysched1.png">
                             </a>
                         </div>
-                        <div class="tile is-6 mr-5">
+                        <div class="tile is-6 mr-5 is is-vertical mt-5">
+                            <h3 class="subtitle"></h3>
                             <a href="https://gnartistic.github.io/workDayScheduler/">
                                 <img src="./assets/images/workdaysched2.png">
                             </a>
                         </div>
                     </div>
                     <div class="tile mt-6">
-                        <div class="tile is-6 mr-5">
+                        <div class="tile is-6 mr-5 is is-vertical">
+                            <h3 class="subtitle has-text-weight-bold">Horiseon: Search Engine Optimization</h3>
                             <a href="https://gnartistic.github.io/horiseon/">
                                 <img src="./assets/images/horiseon1.jpeg">
                             </a>
                         </div>
-                        <div class="tile is-6">
+                        <div class="tile is-6 is is-vertical mt-5">
+                            <h3 class="subtitle"></h3>
                             <a href="https://gnartistic.github.io/horiseon/">
                                 <img src="./assets/images/horiseon2.jpeg">
                             </a>
@@ -147,42 +162,42 @@
             <div class="buttons mt-5t">
                 <button class="button">
                     <a href="https://github.com/gnartistic">
-                    <span class="icon is-small">
-                        <i class="fab fa-github"></i>
-                    </span>
-                    <span>GitHub</span>
+                        <span class="icon is-small">
+                            <i class="fab fa-github"></i>
+                        </span>
+                        <span>GitHub</span>
                     </a>
                 </button>
                 <button class="button">
                     <a href="https://www.instagram.com/gn4rtistic/">
-                    <span class="icon is-small">
-                        <i class="fa-brands fa-instagram"></i>
-                    </span>
-                    <span>Instagram</span>
+                        <span class="icon is-small">
+                            <i class="fa-brands fa-instagram"></i>
+                        </span>
+                        <span>Instagram</span>
                     </a>
                 </button>
                 <button class="button">
                     <a href="https://open.spotify.com/user/9o7s9mescfet5m7u7e65rcmxm">
-                    <span class="icon is-small">
-                        <i class="fa-brands fa-spotify"></i>
-                    </span>
-                    <span>Spotify</span>
+                        <span class="icon is-small">
+                            <i class="fa-brands fa-spotify"></i>
+                        </span>
+                        <span>Spotify</span>
                     </a>
                 </button>
                 <button class="button">
                     <a href="tel:2104457296">
-                    <span class="icon is-small">
-                        <i class="fa-solid fa-phone"></i>
-                    </span>
-                    <span>210-445-7296</span>
+                        <span class="icon is-small">
+                            <i class="fa-solid fa-phone"></i>
+                        </span>
+                        <span>210-445-7296</span>
                     </a>
                 </button>
                 <button class="button">
                     <a href="mailto:gn4rtistic@gmail.com">
-                    <span class="icon is-small">
-                        <i class="fa-solid fa-envelope"></i>
-                    </span>
-                    <span>gn4rtistic@gmail.com</span>
+                        <span class="icon is-small">
+                            <i class="fa-solid fa-envelope"></i>
+                        </span>
+                        <span>gn4rtistic@gmail.com</span>
                     </a>
                 </button>
             </div>
