--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <!--SERVICES OFFERED SECTION-->
         <section id="services" class="section box is-medium">
             <h1 class="title">Services</h1>
-            <h2 class="subtitle mt-6">I help small businesses and individuals create brands or identities that are
+            <h2 class="subtitle mt-6">I help small businesses and individuals create brands and identities that are
                 clear,
                 strong, and reflective of what they are as an entity.</h2>
         </section>
