updated works section

--- a/index.html
+++ b/index.html
@@ -110,11 +110,13 @@
                 <div class="tile is-ancestor is-vertical">
                     <div class="tile is-12 is-vertical">
                         <div class="tile ml-5 is-vertical mb-5">
+                            <h3 class="subtitle has-text-weight-bold">hobbyXchange</h3>
+                            <a href="https://hobbyxchange.herokuapp.com/">
+                                <img src="/Screen Shot 2022-08-11 at 8.42.49 PM.png"
+                            </a>
                             <h3 class="subtitle has-text-weight-bold">CoinWiki</h3>
                             <a href="https://mcoliveros1202.github.io/coinWiki/">
-                                <video wedith="640" height="360" controls="controls">
-                                    <source src="./assets/images/giphy.mp4" type="video/mp4">
-                                </video>
+                            <img src="/Screen Shot 2022-08-11 at 8.42.37 PM.png">
                             </a>
                         </div>
                         <div class="tile is-vertical mt-5">
