--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                         <div class="tile ml-5 is-vertical mb-5">
                             <h3 class="subtitle has-text-weight-bold">hobbyXchange</h3>
                             <a href="https://hobbyxchange.herokuapp.com/">
-                                <img src="/Screen Shot 2022-08-11 at 8.42.49 PM.png"
+                                <img src="./assets/images/Screen Shot 2022-08-11 at 8.42.49 PM.png"
                             </a>
                             <h3 class="subtitle has-text-weight-bold">CoinWiki</h3>
                             <a href="https://mcoliveros1202.github.io/coinWiki/">
-                            <img src="/Screen Shot 2022-08-11 at 8.42.37 PM.png">
+                            <img src="./assets/images/Screen Shot 2022-08-11 at 8.42.37 PM.png">
                             </a>
                         </div>
                         <div class="tile is-vertical mt-5">
