--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <img src="./assets/images/Screen Shot 2022-08-11 at 8.42.49 PM.png"
                             </a>
                             <h3 class="subtitle has-text-weight-bold">CoinWiki</h3>
-                            <a href="https://mcoliveros1202.github.io/coinWiki/">
+                            <a href="https://gnartistic.github.io/coinWiki2.0/">
                             <img src="./assets/images/Screen Shot 2022-08-11 at 8.42.37 PM.png">
                             </a>
                         </div>
